# global_path_planning

./: CMakeLists.txt  README.md  package.xml
config/: gpmp2_planner_config.yaml
launch/: planner.launch.py
rviz/: gpmp2_planner.rviz
src/: global_path_planner.cpp
